fix issue with text overtaking card by setup overflow to auto also setup height in card-size and offers, overide img-thumbnail by removing border, padding and setup width and height of image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,7 +168,7 @@
 /* Navigation */
 
 .navbar {
-    background-color: #266286;
+    background-color: #5989a7;;
 }
 .navbar-toggler{
     border: 0;
@@ -267,7 +267,7 @@
 }
 
 .container-wrapper--footer{
-    background-color: #266286;
+    background-color: #5989a7;;
 }
 
 /* To style about.html */
@@ -321,18 +321,27 @@
     margin: 5px;
     padding: 5px;
     height: 730px;
+    background-color: #dce3f5;
 }
 
-.card .card-body{
+.card .offers{
     padding: 5px;
     box-shadow: inset 0 0 5px #757373;
     text-transform: initial;
-    
+    white-space: normal;
+    overflow:auto;
+    margin-bottom: 5px;
+    height: 391px;
 }
 
 .img-thumbnail{
     width: 330px;
     height: 250px;
-    box-shadow: inset 0 0 5px #757373;
+    
+    padding: 0;
+    background-color: #fff;
+    border: 0;
+    border-radius: 0; 
+    max-width: 100%;
 }
 
